2010-07-13  Robert Larice
 * src/frontend/device.c ,
 * src/frontend/device.h :
        split the function printstr() into printstr_n() and printstr_m()
        printstr() is exclusively used as argument
          to the map function dgen_for_n()
        and misused a parameter to distinguish two separate functionalities.

2010-07-13  Robert Larice
 * src/frontend/gens.c ,
 * src/frontend/gens.h :
        fix the type of the function pointer argument of wl_forall()

2010-07-11  Robert Larice
 * src/frontend/parse.c ,
 * src/include/fteparse.h :
        fix function pointer initialization

2010-07-11  Robert Larice
 * src/frontend/numparam/spicenum.c ,
 * src/frontend/numparam/xpressn.c ,
 * src/misc/hash.c :
        add casts for void* returning functions

2010-07-11  Robert Larice
 * src/xspice/cmpp/mod_lex.l :
        for c++, lex input() function is named yyinput()

2010-07-11  Robert Larice
 * src/spicelib/parser/inpptree.c :
        missing (void*) casts

2010-07-11  Robert Larice
 * src/spicelib/analysis/cktsens.c :
        fix type and usage of some function pointers

2010-07-11  Robert Larice
 * src/spicelib/devices/dev.c :
        fix some function pointer casts

2010-07-11  Robert Larice
 * src/xspice/idn/idndig.c :
        missing casts

2010-07-11  Robert Larice
 * src/ngmultidec.c ,
 * src/frontend/resource.c :
        tiny, fix two casts

2010-07-11  Robert Larice
 * src/xspice/icm/analog/oneshot/cfunc.mod ,
 * src/xspice/icm/analog/pwl/cfunc.mod ,
 * src/xspice/icm/analog/sine/cfunc.mod ,
 * src/xspice/icm/analog/square/cfunc.mod ,
 * src/xspice/icm/analog/triangle/cfunc.mod ,
 * src/xspice/icm/digital/d_osc/cfunc.mod ,
 * src/xspice/icm/xtradev/core/cfunc.mod :
        dont compare with '\0' when NULL was meant

2010-07-11  Robert Larice
 * src/spicelib/devices/vccs/vccsask.c ,
 * src/spicelib/devices/vccs/vccsdel.c ,
 * src/spicelib/devices/vccs/vccsdest.c ,
 * src/spicelib/devices/vccs/vccsload.c ,
 * src/spicelib/devices/vccs/vccsmdel.c ,